[package]
name = "rustlogger"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-alloc = { version = "0.5.0" }
esp-hal = { version = "0.22.0", features = [ "esp32c3"] }
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
]}
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
esp-wifi = { version = "0.11.0", default-features=false, features = [
    "esp32c3",
    "utils",
    "wifi",
    "ble",
    "esp-alloc",
    "log",
] }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [ "macros", "async"] }
embassy-executor = { version = "0.6.0",  features = [
    "task-arena-size-65536",
] }
embassy-time     = { version = "0.3.1",  features = ["generic-queue-8"] }
embassy-sync     = { version = "0.6.1" }
esp-hal-embassy  = { version = "0.5.0",  features = ["esp32c3"] }
static_cell      = { version = "2.1.0",  features = ["nightly"] }
critical-section = "1.2.0"
log = { version = "0.4.21" }
embedded-io = "0.6.1"

embedded-io-async = "0.6.1"
embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }

heapless = { version = "0.8.0", default-features = false }
embedded-graphics = "0.8.1"
epd-waveshare = "0.6.0"
ibm437 = "0.3.3"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
strip = true
overflow-checks = false
